--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>Stop Believing This Myth… Markets Are Rigged to the Long Side 📈</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2230,7 +2230,7 @@
                     <div class="video-info">
                         <h3>Stop Using VWAP Wrong! Here's What Works 🚀📈</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 24, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5184,7 +5184,7 @@
                         <div class="video-info">
                             <h3>Stop Believing This Myth… Markets Are Rigged to the Long Side 📈</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5960,7 +5960,7 @@
                         <div class="video-info">
                             <h3>Stop Using VWAP Wrong! Here's What Works 🚀📈</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 24, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
