--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">9 minutes ago</div>
+                        <div class="date">37 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>23 September: The Birth of a Spiritual Movement | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring the Power of Will</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Enlightenment – A Vision Beyond Light & Darkness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 - Review and First Real Time Pizza Cook</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -486,7 +486,7 @@
                     <div class="video-info">
                         <h3>The only way to protect your future is by taxing the billionaires more</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -816,7 +816,7 @@
                     <div class="video-info">
                         <h3>Tip. 10 Most important Step when making pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1810,7 +1810,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN DO TOMORROWLAND</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1821,7 +1821,7 @@
                     <div class="video-info">
                         <h3>Tip. 8 How to detach pizza when is stick #shorts</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1832,7 +1832,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN ULTIMATE PRECISION TEST</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5239,7 +5239,7 @@
                         <div class="video-info">
                             <h3>The only way to protect your future is by taxing the billionaires more</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>23 September: The Birth of a Spiritual Movement | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring the Power of Will</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7297,7 +7297,7 @@
                         <div class="video-info">
                             <h3>Enlightenment – A Vision Beyond Light & Darkness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8750,7 +8750,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 - Review and First Real Time Pizza Cook</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8772,7 +8772,7 @@
                         <div class="video-info">
                             <h3>Tip. 10 Most important Step when making pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8981,7 +8981,7 @@
                         <div class="video-info">
                             <h3>Tip. 8 How to detach pizza when is stick #shorts</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">9 minutes ago</div>
+                            <div class="date">37 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9664,7 +9664,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN DO TOMORROWLAND</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9675,7 +9675,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN ULTIMATE PRECISION TEST</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
